...
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toEndOf="@id/medicationThumbnail"
            app:layout_constraintEnd_toStartOf="@id/statusChip"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Paracetamol" />

        <TextView
            android:id="@+id/medicationDose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="@id/medicationName"
            app:layout_constraintEnd_toStartOf="@id/statusChip"
            app:layout_constraintTop_toBottomOf="@id/medicationName"
            tools:text="500mg" />

        <com.google.android.material.chip.Chip
            android:id="@+id/statusChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
...
